--- a/predstavitev/css/source/theme.scss
+++ b/predstavitev/css/source/theme.scss
@@ -56,39 +56,47 @@ $heading1TextShadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b
 // See ../../bower_components/reveal.js/css/theme/README.md
 // for further explanations on how reveal.js themes work.
 
-.content {
-    z-index: 9999;
-    margin-top: 500px !important;
+.content-main-title {
+    width: 580px !important;
+    height: 220px !important;
+    position: absolute !important;
+    text-align: center !important;
+    left: 50% !important;
+    margin-left: -290px !important;
+    top: 70% !important;
 }
 
 .background {
     z-index: 0;
+    width: 100%;
+    height: 100%;
     position: absolute;
     opacity: 0.3;
 
     .frame-wrapper {
         width: 300px;
         height: 480px;
+        margin-left: -150px;
     }
 
     .frame-wrapper:nth-child(1) {
         position: absolute;
-        top: -100px;
-        left: -20px;
+        top: 10%;
+        left: 30%;
         transform: rotate(15deg);
     }
 
     .frame-wrapper:nth-child(2) {
         position: absolute;
-        top: -100px;
-        left: 740px;
+        top: 10%;
+        left: 70%;
         transform: rotate(-15deg);
     }
 
     .frame-wrapper:nth-child(3) {
         position: absolute;
-        top: -50px;
-        left: 360px;
+        top: 15%;
+        left: 50%;
     }
 
 }
